--- a/unclose/manifest.json
+++ b/unclose/manifest.json
@@ -7,7 +7,7 @@
   "icons": { 
            "48": "icon.png"
            },
-          
+  "options_page": "popup.html",
   "browser_action": {
     "default_icon": "icon.png",
     "popup": "popup.html",
