--- a/tab-to-the-right/manifest.json
+++ b/tab-to-the-right/manifest.json
@@ -1,20 +1,12 @@
 {
-  "name": "Tab to the next right",
-  "version": "1.5",
+  "name": "Tab to the next",
+  "version": "1.6",
   "author": "Wei Hu",
-  "description": "Brings the newly created tab to the next right of the currently selected tab.",
+  "description": "Brings the new tab next to the current one. Also controls which tab will be selected when you close one.",
   "background_page": "background.html",
   "permissions": [
     "tabs"
   ],
-  // "content_scripts": [
-  //   {
-  //     "matches": [
-  //       "http://*/*",
-  //       "https://*/*"
-  //     ],
-  //     "js": ["onunload.js"]
-  //   }
-  // ],
+  "icons": {"48": "go-jump.png"},
   "options_page": "options.html"
 }
