--- a/feed/manifest.json
+++ b/feed/manifest.json
@@ -11,7 +11,7 @@
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
-      "js": ["feed_finder.js"]
+      "js": ["feed_finder.js", "tpgr_cs.js"]
     }
   ],
   "icons": { "128": "feed-icon-128x128.png" },
