--- a/unclose/manifest.json
+++ b/unclose/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "UndoCloseTab",
-  "version": "3.3",
-  "author": "MK & Wei Hu",
+  "version": "3.52",
+  "author": "MK & Wei Hu & Xerios",
   "description": "Undo your closed tabs",
   "background_page": "background.html",    
   "icons": { 
