update pdf viewer

--- a/pdf-viewer/manifest.json
+++ b/pdf-viewer/manifest.json
@@ -1,14 +1,15 @@
 {
-  "name": "Docs PDF/PowerPoint Viewer (http only)",
-  "version": "1.5.3",
-  "description": "Automatically previews pdfs, powerpoint presentations, and other documents in Google Docs Viewer.",
+  "name": "Docs Viewer (http only)",
+  "version": "1.5.8",
+  "default_locale": "en",
+  "description": "__MSG_ext_description__",
   "icons": {"16": "icon16.gif",
-	    "32": "icon32.gif",
-	    "48": "icon48.gif",
-	    "128": "icon128.gif"},
+      "32": "icon32.gif",
+      "48": "icon48.gif",
+      "128": "icon128.gif"},
   "content_scripts": [
-    {"matches": ["http://*/*"],
+    {"matches": ["http://*/*", "https://*/*"],
      "js": ["jquery.min.js", "content.js"],
-     "css": ["content.css"]}
+     "all_frames": true}
   ]
 }
